# voicegym

./: .gitignore  LICENSE.txt  Makefile  README.md  build.gradle  install-fftw3-library.sh
app/: CMakeLists.txt  build.gradle
app/sampledata/: recordings.json
app/src/androidTest/assets/: 220Hz-A3.m4a  pfeifen.raw  testfile1.m4a  testfile2.m4a
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/res/drawable/: arrow_left_white.xml  ic_cancel_off.xml  ic_cancel_on.xml  ic_mic_white.xml  ic_record_off.xml  ic_star_off.xml  ic_star_off_bright_background.xml  ic_star_on.xml  ic_sync_black_24dp.xml  side_nav_bar.xml
app/src/main/res/layout/: activity_main.xml  activity_measuring_fourier_transforms.xml  activity_record.xml  app_bar_navigation_drawer.xml  content_measuring_fourier_transforms.xml  content_navigation_drawer.xml  fragment_exercises_list.xml  fragment_instruments.xml  fragment_record_mode_control.xml  fragment_recording_library.xml  fragment_recordings.xml  fragment_recordings_list.xml  fragment_reports.xml  fragment_spectrogram.xml  input_dialog.xml  nav_header.xml  nav_header_navigation_drawer.xml  navigation_drawer.xml  rating_dialog.xml
app/src/main/res/layout-land/: activity_record.xml  fragment_playback.xml  fragment_playback_mode_control.xml  fragment_record_mode_control.xml
app/src/main/res/layout-port/: activity_record.xml  fragment_playback.xml  fragment_playback_mode_control.xml  fragment_record_mode_control.xml
app/src/main/res/menu/: activity_navigation_drawer_drawer.xml
app/src/main/res/values/: arrays.xml  (+7 more)
(+144 files in other folders)
